--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ package-mode = false
 python = "^3.12"
 pandas = "^2.2.2"
 matplotlib = "^3.9.2"
+scikit-learn = "^1.5.2"
+seaborn = "^0.13.2"
 
 
 [build-system]
